--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -9,6 +9,8 @@
 
 
 
+
+
 .photo-info-box {
 
  border: 1px solid #e5e5e5;
@@ -72,3 +74,6 @@ padding: 10px;
 
   width: 40% !important;
 }
+
+/*Modal CSS*/
+
