--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -6,7 +6,10 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+   /* 	background: #f3f3f3 !important;
+font-family: 'Open Sans', sans-serif;*/
 }
+
 
 footer {
     margin: 50px 0;
